# TrivialQuest

./: .gitignore  Cargo.toml  Makefile  README.md  crates.js  help.html  index.html  main  rustc-ice-2024-05-25T19_39_28-2174323.txt  rustc-ice-2024-05-25T19_39_40-2174471.txt  rustc-ice-2024-05-25T19_39_40-2174472.txt  rustc-ice-2024-05-25T19_40_07-2174909.txt  rustc-ice-2024-05-25T23_39_24-2371589.txt  rustc-ice-2024-05-25T23_39_24-2371590.txt  rustc-ice-2024-05-26T01_49_05-2470765.txt  rustc-ice-2024-05-26T02_34_14-2507927.txt  rustfmt.toml  search-index.js  settings.html  src-files.js
.github/workflows/: ci.yaml  code_ci.yaml  godot_ci.yaml  main.yml
assets/levels/: level_0.xml
godot/: TrivialQuest.gdextension  icon.svg.import  project.godot  sprite_2d.tscn
main/: all.html  fn.main.html  index.html
rust/: Cargo.toml
rust/src/: lib.rs
rust/src/game/sprites/: player.rs
rust/tests/: add_test.rs
search.desc/trivial_quest/: trivial_quest-desc-0-.js
src/: components.rs  defines.rs  graphics.rs  id.rs  lib.rs  main.rs  plugins.rs  sprites.rs  systems.rs
src/components/: name.rs  person.rs
src/graphics/: camera.rs
src/main/: main.rs.html
src/objects/: entities.rs
src/objects/entities/: enemy.rs  player.rs  shared_components.rs
src/plugins/: game.rs  hello.rs  physics.rs  render.rs
src/plugins/game/: config.rs  level.rs  shared.rs
src/plugins/physics/: collider.rs  gravity.rs  movement.rs
src/sprites/: shared.rs  shared_components.rs
src/systems/: hello.rs  people.rs
src/trivial_quest/: id.rs.html  lib.rs.html  plugins.rs.html
trivial_quest/: all.html  index.html  sidebar-items.js
trivial_quest/id/: index.html  sidebar-items.js  struct.Gen.html  type.Id.html
trivial_quest/plugins/: index.html  sidebar-items.js
type.impl/std/: primitive.i32.js
(+129 files in other folders)
