[package]
name = "trivial_quest"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
colored = "2"

[dev-dependencies]
proptest = "1.4.0"
insta = { version = "1.38.0" }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[features]
disable_color = ["colored/no-color"]
